labs/lab-3/part-3/style.css
* {
  box-sizing: border-box;
}

body {
  background-color: rgb(100, 136, 154);
  color: #080f1a;
  margin: 0;
  font: 1.2em / 1.6 sans-serif;
}

img {
  max-width: 100%;
  display: block;
}

.logo {
  font-size: 200%;
  padding: 50px 20px;
  margin: 0 auto;
  max-width: 980px;
}

.grid {
  margin: 0 auto;
  max-width: 980px;
  display: grid;
  grid-template-columns: 3fr 1fr;
  gap: 20px;
}

nav {
  background-color: rgb(18, 151, 23);
  padding: 0.5em;
  position: sticky;
  top: 0;
  border-bottom: 3px solid black;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
  display: flex;
  justify-content: space-around; 
}

nav a {
  color: rgb(13, 9, 2);
  text-decoration: none;
  padding: 0.5em 1em;
}

.photos {
  list-style: none;
  margin: 0;
  padding: 0;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 5px;
  border: 3px solid black;
  padding: 10px;
}

.feature {
  width: 200px;
  float: left;
  margin: 10px 25px 15px 0;
}

html {
  /* Syntax: scrollbar-color: [Thumb Color] [Track/Background Color]; */
  scrollbar-color: #aa6666 #273f4f;
    scrollbar-width: thick; 
}

h1 {
  color: rgb(19, 36, 51);
}

